Protect product creation for admins only